// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageWallet has the expected html structure 1`] = `
<tm-page-stub
  data-title="Wallet"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub>
      <a>
        <i
          class="material-icons"
        >
          refresh
        </i>
      </a>
       
      <a>
        <i
          class="material-icons"
        >
          search
        </i>
      </a>
    </tool-bar-stub>
  </template>
   
  <modal-search-stub
    type="balances"
  />
   
  <ul>
    <li-coin-stub
      class="tm-li-balance"
      coin="[object Object]"
    />
    <li-coin-stub
      class="tm-li-balance"
      coin="[object Object]"
    />
    <li-coin-stub
      class="tm-li-balance"
      coin="[object Object]"
    />
    <!---->
  </ul>
</tm-page-stub>
`;

exports[`PageWallet should filter the balances 1`] = `
<tm-page-stub
  data-title="Wallet"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub>
      <a>
        <i
          class="material-icons"
        >
          refresh
        </i>
      </a>
       
      <a>
        <i
          class="material-icons"
        >
          search
        </i>
      </a>
    </tool-bar-stub>
  </template>
   
  <modal-search-stub
    type="balances"
  />
   
  <ul>
    <li-coin-stub
      class="tm-li-balance"
      coin="[object Object]"
    />
  </ul>
</tm-page-stub>
`;
